--- a/ANIMAL GAME VERSION 6/AnimalGame/AnimalGame.csproj
+++ b/ANIMAL GAME VERSION 6/AnimalGame/AnimalGame.csproj
@@ -45,17 +45,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Animal.cs" />
-    <Compile Include="Attack.cs" />
+    <Compile Include="Attack\Attack.cs" />
     <Compile Include="AttackEffect.cs" />
     <Compile Include="Battle.cs" />
-    <Compile Include="DamageAttack.cs" />
-    <Compile Include="Direction.cs" />
-    <Compile Include="EvoledRock.cs" />
-    <Compile Include="EvolvedAir.cs" />
-    <Compile Include="EvolvedAnimal.cs" />
-    <Compile Include="EvolvedFire.cs" />
-    <Compile Include="EvolvedGrass.cs" />
-    <Compile Include="EvolvedWater.cs" />
+    <Compile Include="Attack\DamageAttack.cs" />
+    <Compile Include="Enumerations\Direction.cs" />
+    <Compile Include="Enumerations\GameState.cs" />
+    <Compile Include="Evolutions\EvoledRock.cs" />
+    <Compile Include="Evolutions\EvolvedAir.cs" />
+    <Compile Include="Evolutions\EvolvedAnimal.cs" />
+    <Compile Include="Evolutions\EvolvedFire.cs" />
+    <Compile Include="Evolutions\EvolvedGrass.cs" />
+    <Compile Include="Evolutions\EvolvedWater.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,14 +64,14 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Item.cs" />
-    <Compile Include="MapTile.cs" />
+    <Compile Include="Enumerations\MapTile.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stat.cs" />
-    <Compile Include="StatChangeAttack.cs" />
+    <Compile Include="Enumerations\Stat.cs" />
+    <Compile Include="Attack\StatChangeAttack.cs" />
     <Compile Include="Store.cs" />
-    <Compile Include="Type.cs" />
+    <Compile Include="Enumerations\Type.cs" />
     <Compile Include="World.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
